@@ -6,13 +6,13 @@ import br.com.karatedopi.repositories.StateRepository;
 
 import br.com.karatedopi.services.exceptions.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,13 +21,15 @@ public class StateService {
 
     private final StateRepository stateRepository;
 
-    public Page<StateDTO> getStates(Pageable pagination){
+    @Cacheable(value = "pagedStates")
+    public Page<StateDTO> getPagedStates(Pageable pagination){
         Page<State> foundStates = stateRepository.findAll(pagination);
         return foundStates.map(StateDTO::getStateDTO);
     }
 
+    @Cacheable(value = "allStates")
     public List<StateDTO> getAllStates() {
-        return stateRepository.findAll().stream().map(StateDTO::getStateDTO).collect(Collectors.toList());
+        return stateRepository.findAll().stream().map(StateDTO::getStateDTO).toList();
     }
 
     public State findStateByNameOrAbbreviation(String name) {
